<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:id="@+id/main_app_activity"
            android:icon="@drawable/ic_recommend"
            android:title="@string/recommendations" />
        <item android:id="@+id/recommendation_history_activity"
            android:icon="@drawable/ic_history"
            android:title="@string/recommendation_history"/>
        <item android:id="@+id/settings_activity"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>
    <group>
        <item android:id="@+id/logout_button"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"/>
    </group>
</menu>