<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/newUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_baseline_person"
        android:ems="10"
        android:hint="@string/username"
        android:maxLength="20"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/newEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_baseline_email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/newUsername"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/newUsername"
        app:layout_constraintTop_toBottomOf="@+id/newUsername" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:onClick="register_user"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/newConfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/newConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/newConfirmPassword" />

    <EditText
        android:id="@+id/newConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_baseline_security"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:password="true"
        app:layout_constraintEnd_toEndOf="@+id/newPassword"
        app:layout_constraintStart_toStartOf="@+id/newPassword"
        app:layout_constraintTop_toBottomOf="@+id/newPassword" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_baseline_security"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:password="true"
        app:layout_constraintEnd_toEndOf="@+id/newEmail"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/newEmail"
        app:layout_constraintTop_toBottomOf="@+id/newEmail" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textStyle="bold"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="openLoginAct"
            android:text="@string/login"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:textSize="18sp" />
    </LinearLayout>
    <FrameLayout
        android:id="@+id/imageView"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:cardCornerRadius="50dp"
        app:cardBackgroundColor="@color/green_1"
        >
            <ImageView
                android:id="@+id/userImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_baseline_person"
                android:onClick="selectImage"
                android:scaleType="centerCrop"/>
    </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:cardCornerRadius="12dp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="75dp">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_plus"
            android:scaleType="centerCrop"/>
        </androidx.cardview.widget.CardView>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>